--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ async function uploadFile() {
         uploadButton.disabled = true;
         uploadButton.textContent = 'Đang tải lên...';
 
-        const response = await fetch('tobicoo-dev-azure.up.railway.app/upload', {
+        const response = await fetch('https://tobicoo-dev-azure.up.railway.app/upload', {
             method: 'POST',
             body: formData
         });
