--- a/index.html
+++ b/index.html
@@ -594,6 +594,71 @@ fileInput.addEventListener('change', function(e) {
         uploadFile();
     }
 });
+// ========== XỬ LÝ MODAL TỔNG QUÁT ==========
+document.querySelectorAll('.modal .close').forEach(closeBtn => {
+    closeBtn.addEventListener('click', function() {
+        this.closest('.modal').style.display = 'none';
+    });
+});
+
+function openModal(modalId) {
+    const modal = document.getElementById(modalId);
+    if (modal) modal.style.display = 'block';
+}
+
+// Đóng khi click bên ngoài hoặc phím ESC
+window.addEventListener('click', (e) => {
+    if (e.target.classList.contains('modal')) {
+        e.target.style.display = 'none';
+    }
+});
+
+document.addEventListener('keydown', (e) => {
+    if (e.key === 'Escape') {
+        document.querySelectorAll('.modal').forEach(modal => {
+            modal.style.display = 'none';
+        });
+    }
+});
+
+// ========== XỬ LÝ MODAL About Us ==========
+const modal = document.getElementById('about-modal');
+const aboutLink = document.getElementById('about-link');
+const closeBtn = document.querySelector('.close');
+
+if (modal && aboutLink && closeBtn) {
+    aboutLink.addEventListener('click', (e) => {
+        e.preventDefault();
+        modal.style.display = 'block';
+    });
+
+    function closeModal() {
+        modal.style.display = 'none';
+    }
+
+    closeBtn.addEventListener('click', closeModal);
+    window.addEventListener('click', (e) => {
+        if (e.target === modal) closeModal();
+    });
+    document.addEventListener('keydown', (e) => {
+        if (e.key === 'Escape') closeModal();
+    });
+}
+
+// ========== XỬ LÝ UPLOAD ==========
+const uploadButton = document.getElementById('upload-button');
+const fileInput = document.getElementById('file-input');
+const dropZone = document.querySelector('.upload-section');
+
+if (uploadButton && fileInput) {
+    uploadButton.addEventListener('click', () => fileInput.click());
+
+    fileInput.addEventListener('change', function(e) {
+        if (e.target.files.length > 0) {
+            uploadFile();
+        }
+    });
+}
 
 async function uploadFile() {
     const file = fileInput.files[0];
@@ -614,7 +679,6 @@ async function uploadFile() {
             body: formData
         });
 
-        // Kiểm tra mã trạng thái HTTP
         if (!response.ok) {
             const errorMessage = await response.text();
             throw new Error('Lỗi tải lên: ' + errorMessage);
@@ -622,19 +686,21 @@ async function uploadFile() {
 
         const result = await response.json();
 
-        // Kiểm tra xem có trường url trong kết quả không
         if (result && result.url) {
-            document.getElementById('direct-link').value = result.url;
-            document.getElementById('link-container').style.display = 'block';
-
-            // Hiện nút sao chép liên kết
+            const linkInput = document.getElementById('direct-link');
+            const linkContainer = document.getElementById('link-container');
             const copyButton = document.getElementById('copy-button');
-            copyButton.style.display = 'block';
-            copyButton.onclick = function() {
-                navigator.clipboard.writeText(result.url).then(() => {
-                    alert('Liên kết đã được sao chép!');
-                });
-            };
+
+            if (linkInput && linkContainer && copyButton) {
+                linkInput.value = result.url;
+                linkContainer.style.display = 'block';
+                copyButton.style.display = 'block';
+                copyButton.onclick = function() {
+                    navigator.clipboard.writeText(result.url).then(() => {
+                        alert('Liên kết đã được sao chép!');
+                    });
+                };
+            }
         } else {
             throw new Error('Phản hồi không chứa trường url');
         }
@@ -645,53 +711,59 @@ async function uploadFile() {
         uploadButton.textContent = 'Tải lên';
     }
 }
+
 // ========== KÉO THẢ ==========
-dropZone.addEventListener('dragover', (e) => {
-    e.preventDefault();
-    dropZone.style.borderColor = '#2196F3';
-});
+if (dropZone && fileInput) {
+    dropZone.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        dropZone.style.borderColor = '#2196F3';
+    });
 
-dropZone.addEventListener('dragleave', () => {
-    dropZone.style.borderColor = '#ced4da';
-});
+    dropZone.addEventListener('dragleave', () => {
+        dropZone.style.borderColor = '#ced4da';
+    });
 
-dropZone.addEventListener('drop', (e) => {
-    e.preventDefault();
-    fileInput.files = e.dataTransfer.files;
-    uploadFile();
-});
+    dropZone.addEventListener('drop', (e) => {
+        e.preventDefault();
+        fileInput.files = e.dataTransfer.files;
+        uploadFile();
+    });
+}
 
 // ========== SAO CHÉP LINK ==========
-document.getElementById('copy-link').addEventListener('click', () => {
-    const linkInput = document.getElementById('direct-link');
-    linkInput.select();
-    document.execCommand('copy');
+const copyLinkBtn = document.getElementById('copy-link');
+if (copyLinkBtn) {
+    copyLinkBtn.addEventListener('click', () => {
+        const linkInput = document.getElementById('direct-link');
+        if (!linkInput) return;
 
-    // Chuyển hướng đến trang xem ảnh
-    const imageUrl = linkInput.value;
-    window.location.href = `view-image.html?url=${encodeURIComponent(imageUrl)}`;
+        linkInput.select();
+        document.execCommand('copy');
 
-            
-            // Hiệu ứng feedback
-            const copyBtn = document.getElementById('copy-link');
-            copyBtn.innerHTML = `
+        // Chuyển hướng đến trang xem ảnh
+        const imageUrl = linkInput.value;
+        window.location.href = `view-image.html?url=${encodeURIComponent(imageUrl)}`;
+
+        // Hiệu ứng feedback
+        copyLinkBtn.innerHTML = `
+            <svg viewBox="0 0 24 24" width="18" height="18" style="margin-right: 8px;">
+                <path fill="currentColor" d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
+            </svg>
+            Đã sao chép!
+        `;
+        copyLinkBtn.style.background = '#4CAF50';
+
+        setTimeout(() => {
+            copyLinkBtn.innerHTML = `
                 <svg viewBox="0 0 24 24" width="18" height="18" style="margin-right: 8px;">
-                    <path fill="currentColor" d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
+                    <path fill="currentColor" d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM7 15h10v-2H7v2zm0-4h10V9H7v2z"/>
                 </svg>
-                Đã sao chép!
+                Sao chép liên kết
             `;
-            copyBtn.style.background = '#4CAF50';
-            
-            setTimeout(() => {
-                copyBtn.innerHTML = `
-                    <svg viewBox="0 0 24 24" width="18" height="18" style="margin-right: 8px;">
-                        <path fill="currentColor" d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H5V5h14v14zM7 15h10v-2H7v2zm0-4h10V9H7v2z"/>
-                    </svg>
-                    Sao chép liên kết
-                `;
-                copyBtn.style.background = '#2196F3';
-            }, 2000);
-        });
+            copyLinkBtn.style.background = '#2196F3';
+        }, 2000);
+    });
+}
     </script>
 </body>
 </html> 
