--- a/view-image.html
+++ b/view-image.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xem Ảnh</title>
+    <link rel="icon" href="logotab.jpg" type="image/png">
     <style>
         /* === Nội dung chính === */
         .container {
