--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         
                        /* === Chân trang luôn ở dưới cùng === */
     footer {
-        position: absolute;
+        position: relative;
         bottom: 0;
         left: 0;
         width: 100%;
