--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             <a href="#" onclick="openModal('terms-modal')">Điều khoản dịch vụ</a>
         </p>
     </div>
-    <div ></div>
+    <!-- Thư viện ảnh hiển thị ở đây -->
+<div id="gallery-container"></div>
+
   <!-- Chân trang -->
   <footer>
     <div class="footer-links">
