--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="nav-links">
             <a href="#" id="about-link">About Us</a>
             <a href="#">Join us!</a>
+            <a href="thuvien.html" class="view-gallery-button-inline">Thư viện ảnh</a>
         </div>
     </nav>
 
