--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <!-- Thanh điều hướng -->
     <nav>
         <a href="#" class="logo">   
@@ -16,10 +17,10 @@
         <div class="nav-links">
             <a href="#" id="about-link">About Us</a>
             <a href="#">Join us!</a>
-            <a href="thuvien.html" class="view-gallery-button-inline">Thư viện ảnh</a>
+            <a href="thu_vien.html" class="view-gallery-button-inline">🖼️ Thư viện</a>
         </div>
     </nav>
-
+    
     <!-- Nội dung chính -->
     <div class="container">
         <div class="upload-section" onclick="document.getElementById('file-input').click()">
@@ -75,9 +76,7 @@
             <a href="#" onclick="openModal('terms-modal')">Điều khoản dịch vụ</a>
         </p>
     </div>
-    <!-- Thư viện ảnh hiển thị ở đây -->
-<div id="gallery-container"></div>
-
+    <div ></div>
   <!-- Chân trang -->
   <footer>
     <div class="footer-links">
@@ -88,6 +87,11 @@
     </div>
     <p>© 2025 ImageHub. All rights reserved.</p>
 </footer>
+
+
+
+
+
 
     <!-- Modal About Us -->
     <div id="about-modal" class="modal">
