--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>ImageHub - Tải ảnh lên miễn phí</title>
     <link rel="icon" href="logotab.jpg" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
     
@@ -17,7 +19,10 @@
         <div class="nav-links">
             <a href="#" id="about-link">About Us</a>
             <a href="#">Join us!</a>
-            <a href="thu_vien.html" class="view-gallery-button-inline">🖼️ Thư viện</a>
+            <a href="thu_vien.html" class="view-gallery-button-inline">
+                          <i class="fas fa-images"></i> Thư viện
+            </a>
+
         </div>
     </nav>
     
