--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
                     <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
                 </svg>
                 <span>Đã tải ảnh lên thành công!</span>
+                <p id="upload-time" style="margin-top: 10px; color: green;"></p>
+
             </div>
 
             <!-- Liên kết trực tiếp -->
@@ -62,6 +64,7 @@
                 Sao chép liên kết
             </button>
         </div>
+        
 
         
         <p class="disclaimer">
