--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
                     <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
                 </svg>
                 <span>Đã tải ảnh lên thành công!</span>
-                <div>   <p id="upload-time" style="margin-top: 10px; color: green;"></p> </div>
-                <p id="upload-time" style="margin-top: 10px; color: green;"></p>
+              <div id="upload-time" style="color: green; margin-top: 10px;"></div>
 
-            </div>
 
             <!-- Liên kết trực tiếp -->
             <p>Liên kết trực tiếp của bạn:</p>
