--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                     <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/>
                 </svg>
                 <span>Đã tải ảnh lên thành công!</span>
-              <div id="upload-time" style="color: green; margin-top: 10px;"></div>
-
+            </div>
 
             <!-- Liên kết trực tiếp -->
             <p>Liên kết trực tiếp của bạn:</p>
@@ -62,8 +61,8 @@
                 </svg>
                 Sao chép liên kết
             </button>
+            <div id="upload-time" style="color: green; margin-top: 10px;"></div>
         </div>
-        
 
         
         <p class="disclaimer">
