--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 </svg>
                 Sao chép liên kết
             </button>
-            <div id="upload-time" style="color: green; margin-top: 10px;"></div>
+            <p id="upload-time"></p>
+
         </div>
 
         
